add Chris to authors file

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,3 +5,4 @@ various contributors:
 - Carlos Henrique Gandarez <gandarez@gmail.com>
 - Michael Mavris <@MMavrisPaleBlue>
 - Tobias Lensing <@starbugs>
+- Chris Pastl <chris@crispybits.app>
