Add Sparkle integration

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,4 @@
-WakaTime is written and maintained by Alan Hamlett and
-various contributors:
+WakaTime is written and maintained by Alan Hamlett and various contributors:
 
 - Alan Hamlett <alan.hamlett@gmail.com>
 - Carlos Henrique Gandarez <gandarez@gmail.com>
